Fix carousel for images of uneven height.

--- a/newco/static/css/global.css
+++ b/newco/static/css/global.css
@@ -89,6 +89,10 @@
     margin-top: 2px;
 }
 
+.carousel .item img {
+    height: 300px;
+    max-width: none;
+}
 
 /* ↓ css defs for image selection/sort */
 
